remove all old article

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@ title: <i class="fa fa-user fa-lg"></i>
 titlename: 关于
 ---
 <h3>关于博客</h3>
-<p style=font-size:18px><B>PainterLin.com</B>首先感谢阮一峰老师、林安亚同学的相关文章，自己参考两位的文章用github、jekyll、markdown搭建起来了这个博客。博客的名字具体还没有想好，事后会更新。自己作为一名IT道路上学习者，希望和大家一起多交流沟通，共同学习，进步！</p>
+<p style=font-size:18px><B>zhangshuzhou.cn</B>首先感谢阮一峰老师、林安亚同学的相关文章，自己参考两位的文章用github、jekyll、markdown搭建起来了这个博客。博客的名字具体还没有想好，事后会更新。自己作为一名IT道路上学习者，希望和大家一起多交流沟通，共同学习，进步！</p>
 
 <h3>关于作者</h3>
 <p style=font-size:18px>名字叫张书洲，现为电子科技大学本科生在读</p>
