delete unused img and first post my old blog articles

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,12 +4,17 @@ title: <i class="fa fa-user fa-lg"></i>
 titlename: 关于
 ---
 <h3>关于博客</h3>
-<p style=font-size:18px><B>zhangshuzhou.cn</B>首先感谢阮一峰老师、林安亚同学的相关文章，自己参考两位的文章用github、jekyll、markdown搭建起来了这个博客。博客的名字具体还没有想好，事后会更新。自己作为一名IT道路上学习者，希望和大家一起多交流沟通，共同学习，进步！</p>
+<p style=font-size:18px><B><a herf="zhangshuzhou.cn">zhangshuzhou.cn</B>首先感谢阮一峰老师、林安亚同学的相关文章和代码，自己是参考借鉴两位的文章和代码用github、jekyll、markdown搭建起来的这个博客。</p>
+<p style=font-size:18px><B><a herf="zhangshuzhou.cn">zhangshuzhou.cn</B>机缘巧合，记得高考的那个假期，无意中听到了牛奶咖啡的<a target="_BLANK" href="http://play.baidu.com/?__methodName=mboxCtrl.playSong&__argsValue=31663579&fm=altg4&__o=aladin#">《明天，你好》，然后在内心的深处产生了一种无名的触动。正如各种所唱的一样，昨天的我们已经走远，曾经肩并肩的伙伴也在举杯祝福后走散，送走昨天，迎来今天，拥抱明天，即使昨天和今天的我们已经伤痕累累，但是我们仍要在哭泣后继续微笑着奔跑，每一次哭泣都是我们的成长！勇敢的喊出“明天，你好”，无论声音是多么的渺小，它却提醒着我们，勇敢是什么！</p>
+
 
 <h3>关于作者</h3>
-<p style=font-size:18px>名字叫张书洲，现为电子科技大学本科生在读</p>
+<p style=font-size:18px>姓名：张书洲</p>
+<p style=font-size:18px>职业：学生</p>
+<p style=font-size:18px>学历：<a target="_BLANK" href="wwww.uestc.edu.cn">电子科技大学</a>本科在读</p>
+<p style=font-size:18px>爱好：游泳、骑行</p>
 
-<center><img src="/public/img/me.jpg" style="width:100%"></center>
+<center><img src="../public/img/me.jpg" style="width:100%"></center>
 
 
 <hr>
