--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@ titlename: 关于
 <h3>关于作者</h3>
 <p style=font-size:18px>姓名：张书洲</p>
 <p style=font-size:18px>职业：学生</p>
-<p style=font-size:18px>学历：<a target="_BLANK" href="wwww.uestc.edu.cn">电子科技大学</a>本科在读</p>
+<p style=font-size:18px>学历：<a target="_BLANK" href="http://wwww.uestc.edu.cn">电子科技大学</a>本科在读</p>
 <p style=font-size:18px>爱好：游泳、骑行</p>
 
 <center><img src="../public/img/me.jpg" style="width:100%"></center>
