add the pic from qiniu

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@ titlename: 关于
 <p style=font-size:18px>学历：<a target="_BLANK" href="http://www.uestc.edu.cn">电子科技大学</a>本科在读</p>
 <p style=font-size:18px>爱好：游泳、骑行</p>
 
-<center><img src="../public/img/me.jpg" style="width:100%"></center>
+<center><img src="http://7xiif2.com1.z0.glb.clouddn.com/me.jpg" style="width:100%"></center>
 
 
 <hr>
